--- a/travel-event-portal/src/main/resources/application.properties
+++ b/travel-event-portal/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=Test12345@
 
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
